objects and maps 2

--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1850,7 @@
        "['Dr Roberts', 'Ms Curnow', 'Miss Curnow-Roberts']"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1863,9 +1863,36 @@
     "    lastname = person.split(' ')[-1] # [-1] selects the last element of the list\n",
     "    y = title + \" \" + lastname\n",
     "    return y\n",
+    "    # return '{}{}'.format(title, lastname) # is the another option\n",
     "\n",
     "list(map(split_title_and_name, people)) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr Roberts\n",
+      "Ms Curnow\n",
+      "Miss Curnow-Roberts\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_name = map(split_title_and_name, people)\n",
+    "for item in title_name:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
