--- a/Week 1.ipynb
+++ b/Week 1.ipynb
@@ -1898,7 +1898,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
     "# The Python Programming Language: Lambda and List Comprehensions"
    ]
   },
@@ -1906,13 +1905,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "Here's an example of lambda that takes in three parameters and adds the first two."
+    "Here's an example of lambda that takes in three parameters and adds the first two.\n",
+    "Lambda's are anonymous functions...\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,22 +1921,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "8"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_function(1, 2, 3)"
+    "my_function(1, 7, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "people = ['Dr Jon Roberts', 'Ms Harriet Curnow', 'Miss Ella Curnow-Roberts']\n",
+    "first_function = lambda person: person.split(' ')[0] + ' ' + person.split(' ')[-1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dr Roberts'"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_function (\"Dr Jon Roberts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for person in people:\n",
+    "    print(split_title_and_name(person) == first_function(person))  # here i made it into a function first!!!  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# here you make and call the function in one go!\n",
+    "for person in people:\n",
+    "    print(split_title_and_name(person) == (lambda x: x.split()[0] + ' ' + x.split()[-1])(person))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# evaluate the map at the time using list. \n",
+    "list(map(split_title_and_name, people)) == list(map(lambda person: person.split(' ')[0] + ' ' + person.split(' ')[-1], people))"
    ]
   },
   {
@@ -2463,6 +2555,7 @@
     }
    ],
    "source": [
+    "\n",
     "my_list = []\n",
     "for number in range(0, 1000):\n",
     "    if number % 2 == 0:\n",
