--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -415,18 +415,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#remove all countries with zero golds\n"
+    "## Test the by eye by doing a double sort.\n",
+    "# only_both_gold = df.where((df['Gold'] > 0) & (df['Gold.1'] > 0 ))\n",
+    "# only_both_gold = only_both_gold.dropna()\n",
+    "# only_both_gold.sort_values(['rel_gap','Gold','Gold.1'], ascending = [False,False, False])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bulgaria'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Remove countries without at least one gold\n",
+    "only_both_gold = df.where((df['Gold'] > 0) & (df['Gold.1'] > 0 ))\n",
+    "only_both_gold = only_both_gold.dropna()\n",
+    "## Calculate relative gap and pull out largest\n",
+    "only_both_gold['rel_gap'] = abs(only_both_gold['Gold']-only_both_gold['Gold.1'])/only_both_gold['Gold.2']\n",
+    "only_both_gold.nlargest(1,['rel_gap']).index[0]\n",
+    "#only_gold.loc[:,['Gold','Gold.1', 'Gold.2','rel_gap']]\n",
+    "#only_gold['rel_gap']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bulgaria'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_three():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    ## Remove countries without at least one gold\n",
+    "    only_both_gold = df.where((df['Gold'] > 0) & (df['Gold.1'] > 0 ))\n",
+    "    only_both_gold = only_both_gold.dropna()\n",
+    "    ## Calculate relative gap and pull out largest\n",
+    "    only_both_gold['rel_gap'] = abs(only_both_gold['Gold']-only_both_gold['Gold.1'])/only_both_gold['Gold.2']\n",
+    "    return only_both_gold.nlargest(1,['rel_gap']).index[0]\n",
+    "\n",
+    "answer_three()\n",
+    "\n"
    ]
   },
   {
@@ -448,6 +504,12 @@
    "outputs": [],
    "source": [
     "def answer_four():\n",
+    "    \n",
+    "    # create the series/df of medals\n",
+    "    # creat the series/df of points\n",
+    "    # dotproduct\n",
+    "    \n",
+    "    \n",
     "    return \"YOUR ANSWER HERE\""
    ]
   },
