--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -3753,14 +3753,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 212,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Remind myself what the data looks like!\n",
+    "\n",
+    "census_df = pd.read_csv('census.csv') # Read in the data again!\n",
+    "census_df=census_df[census_df['SUMLEV'] == 50] #Remove the state level data \n",
+    "\n",
+    "columns_to_keep = ['STNAME','CTYNAME','CENSUS2010POP']\n",
+    "census_df = census_df[columns_to_keep] # Trim to only the data i need for this question.\n",
+    "\n",
+    "# # First i tried to set the index as it might help \n",
+    "# # DOESN\"T SEEM TO! maybe as you can't do operations on them??\n",
+    "# census_df = census_df.set_index(['STNAME', 'CTYNAME']) \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "STNAME     \n",
+       "Alabama  37    658466\n",
+       "         49    412992\n",
+       "         45    334811\n",
+       "Alaska   71    291826\n",
+       "         76     97581\n",
+       "Name: CENSUS2010POP, dtype: int64"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_df.groupby('STNAME')['CENSUS2010POP'].nlargest(3).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['California', 'Texas', 'Illinois']"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans_df = census_df.groupby('STNAME')['CENSUS2010POP'].nlargest(3).sum(level=0).nlargest(3)\n",
+    "ans_df.index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['California', 'Texas', 'Illinois']"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def answer_six():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    \n",
+    "    census_df = pd.read_csv('census.csv') # Read in the data again!\n",
+    "    census_df=census_df[census_df['SUMLEV'] == 50] #Remove the state level data \n",
+    "    columns_to_keep = ['STNAME','CTYNAME','CENSUS2010POP']\n",
+    "    census_df = census_df[columns_to_keep] # Trim to only the data i need for this question.\n",
+    "    \n",
+    "    ans_df = census_df.groupby('STNAME')['CENSUS2010POP'].nlargest(3).sum(level=0).nlargest(3)\n",
+    "\n",
+    "    return ans_df.index.tolist()\n",
+    "    \n",
+    "answer_six()"
    ]
   },
   {
