--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -3865,6 +3865,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "      <th>POPESTIMATE2010</th>\n",
+       "      <th>POPESTIMATE2011</th>\n",
+       "      <th>POPESTIMATE2012</th>\n",
+       "      <th>POPESTIMATE2013</th>\n",
+       "      <th>POPESTIMATE2014</th>\n",
+       "      <th>POPESTIMATE2015</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>54660</td>\n",
+       "      <td>55253</td>\n",
+       "      <td>55175</td>\n",
+       "      <td>55038</td>\n",
+       "      <td>55290</td>\n",
+       "      <td>55347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>183193</td>\n",
+       "      <td>186659</td>\n",
+       "      <td>190396</td>\n",
+       "      <td>195126</td>\n",
+       "      <td>199713</td>\n",
+       "      <td>203709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Barbour County</td>\n",
+       "      <td>27341</td>\n",
+       "      <td>27226</td>\n",
+       "      <td>27159</td>\n",
+       "      <td>26973</td>\n",
+       "      <td>26815</td>\n",
+       "      <td>26489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Bibb County</td>\n",
+       "      <td>22861</td>\n",
+       "      <td>22733</td>\n",
+       "      <td>22642</td>\n",
+       "      <td>22512</td>\n",
+       "      <td>22549</td>\n",
+       "      <td>22583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Blount County</td>\n",
+       "      <td>57373</td>\n",
+       "      <td>57711</td>\n",
+       "      <td>57776</td>\n",
+       "      <td>57734</td>\n",
+       "      <td>57658</td>\n",
+       "      <td>57673</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    STNAME         CTYNAME  POPESTIMATE2010  POPESTIMATE2011  POPESTIMATE2012  \\\n",
+       "1  Alabama  Autauga County            54660            55253            55175   \n",
+       "2  Alabama  Baldwin County           183193           186659           190396   \n",
+       "3  Alabama  Barbour County            27341            27226            27159   \n",
+       "4  Alabama     Bibb County            22861            22733            22642   \n",
+       "5  Alabama   Blount County            57373            57711            57776   \n",
+       "\n",
+       "   POPESTIMATE2013  POPESTIMATE2014  POPESTIMATE2015  \n",
+       "1            55038            55290            55347  \n",
+       "2           195126           199713           203709  \n",
+       "3            26973            26815            26489  \n",
+       "4            22512            22549            22583  \n",
+       "5            57734            57658            57673  "
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remind myself what the data looks like!\n",
+    "\n",
+    "census_df = pd.read_csv('census.csv') # Read in the data again!\n",
+    "census_df=census_df[census_df['SUMLEV'] == 50] #Remove the state level data \n",
+    "\n",
+    "columns_to_keep = ['STNAME','CTYNAME',\n",
+    "                   'POPESTIMATE2010',\n",
+    "                   'POPESTIMATE2011',\n",
+    "                   'POPESTIMATE2012',\n",
+    "                   'POPESTIMATE2013',\n",
+    "                   'POPESTIMATE2014',\n",
+    "                   'POPESTIMATE2015']\n",
+    "\n",
+    "census_df = census_df[columns_to_keep] # Trim to only the data i need for this question.\n",
+    "census_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_df['DIFF'] = census_df[['POPESTIMATE2010','POPESTIMATE2011','POPESTIMATE2012','POPESTIMATE2013',\n",
+    "                               'POPESTIMATE2014','POPESTIMATE2015']].max(1) - census_df[['POPESTIMATE2010',\n",
+    "                                'POPESTIMATE2011','POPESTIMATE2012','POPESTIMATE2013', 'POPESTIMATE2014','POPESTIMATE2015']].min(1)\n",
+    "ans_df = census_df.nlargest(1,['DIFF'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Harris County'"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans_df['CTYNAME'].item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Harris County'"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans_df['CTYNAME'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -3872,6 +4059,28 @@
    "outputs": [],
    "source": [
     "def answer_seven():\n",
+    "    \n",
+    "    # DO THE DATA\n",
+    "    census_df = pd.read_csv('census.csv') # Read in the data again!\n",
+    "    census_df=census_df[census_df['SUMLEV'] == 50] #Remove the state level data \n",
+    "    columns_to_keep = ['STNAME','CTYNAME',\n",
+    "                   'POPESTIMATE2010',\n",
+    "                   'POPESTIMATE2011',\n",
+    "                   'POPESTIMATE2012',\n",
+    "                   'POPESTIMATE2013',\n",
+    "                   'POPESTIMATE2014',\n",
+    "                   'POPESTIMATE2015']\n",
+    "    census_df = census_df[columns_to_keep] # Trim to only the data i need for this question.\n",
+    "    \n",
+    "    # ANSWER THE QUESTION\n",
+    "    census_df['DIFF'] = census_df[['POPESTIMATE2010','POPESTIMATE2011','POPESTIMATE2012','POPESTIMATE2013',\n",
+    "                               'POPESTIMATE2014','POPESTIMATE2015']].max(1) - census_df[['POPESTIMATE2010',\n",
+    "                                'POPESTIMATE2011','POPESTIMATE2012','POPESTIMATE2013', 'POPESTIMATE2014','POPESTIMATE2015']].min(1)\n",
+    "    \n",
+    "    ans_df = census_df.nlargest(1,['DIFF'])\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    return \"YOUR ANSWER HERE\""
    ]
   },
