--- a/Week 3.ipynb
+++ b/Week 3.ipynb
@@ -18242,10 +18242,115 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### Note from the video\n",
+    "\n",
+    "1. ratio Scale: all units equally spaced - you can use maths operations, e.g. hieght weight\n",
+    "2. Interval scale: all units equally spaced, no true zero, e.g. compass degrees\n",
+    "3. Ordinal scale: order in important, not evenly spaced, e.g. A+, A, A-, B+ etc\n",
+    "4. Nominal scale: categories but no order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Grades</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>excellent</th>\n",
+       "      <td>A+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>excellent</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>excellent</th>\n",
+       "      <td>A-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>good</th>\n",
+       "      <td>B+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>good</th>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>good</th>\n",
+       "      <td>B-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ok</th>\n",
+       "      <td>C+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ok</th>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ok</th>\n",
+       "      <td>C-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>poor</th>\n",
+       "      <td>D+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>poor</th>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Grades\n",
+       "excellent     A+\n",
+       "excellent      A\n",
+       "excellent     A-\n",
+       "good          B+\n",
+       "good           B\n",
+       "good          B-\n",
+       "ok            C+\n",
+       "ok             C\n",
+       "ok            C-\n",
+       "poor          D+\n",
+       "poor           D"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame(['A+', 'A', 'A-', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D+', 'D'],\n",
     "                  index=['excellent', 'excellent', 'excellent', 'good', 'good', 'good', 'ok', 'ok', 'ok', 'poor', 'poor'])\n",
@@ -18255,18 +18360,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "excellent    A+\n",
+       "excellent     A\n",
+       "excellent    A-\n",
+       "good         B+\n",
+       "good          B\n",
+       "Name: Grades, dtype: category\n",
+       "Categories (11, object): [A, A+, A-, B, ..., C+, C-, D, D+]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Grades'].astype('category').head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jonathanroberts/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: specifying 'categories' or 'ordered' in .astype() is deprecated; pass a CategoricalDtype instead\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "excellent    A+\n",
+       "excellent     A\n",
+       "excellent    A-\n",
+       "good         B+\n",
+       "good          B\n",
+       "Name: Grades, dtype: category\n",
+       "Categories (11, object): [D < D+ < C- < C ... B+ < A- < A < A+]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grades = df['Grades'].astype('category',\n",
     "                             categories=['D', 'D+', 'C-', 'C', 'C+', 'B-', 'B', 'B+', 'A-', 'A', 'A+'],\n",
@@ -18276,18 +18423,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "excellent     True\n",
+       "excellent     True\n",
+       "excellent     True\n",
+       "good          True\n",
+       "good          True\n",
+       "good          True\n",
+       "ok            True\n",
+       "ok           False\n",
+       "ok           False\n",
+       "poor         False\n",
+       "poor         False\n",
+       "Name: Grades, dtype: bool"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grades > 'C'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Low\n",
+       "1       Low\n",
+       "2      High\n",
+       "3    Medium\n",
+       "4       Low\n",
+       "5      High\n",
+       "6       Low\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series(['Low', 'Low', 'High', 'Medium', 'Low', 'High', 'Low'])\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jonathanroberts/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: specifying 'categories' or 'ordered' in .astype() is deprecated; pass a CategoricalDtype instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0       Low\n",
+       "1       Low\n",
+       "2      High\n",
+       "3    Medium\n",
+       "4       Low\n",
+       "dtype: category\n",
+       "Categories (3, object): [Low < Medium < High]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.astype('category', ordered = True, categories = ['Low', 'Medium', 'High']).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jonathanroberts/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: using a dict on a Series for aggregation\n",
+      "is deprecated and will be removed in a future version\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "STNAME\n",
+       "Alabama                   (11706.087, 75333.413]\n",
+       "Alaska                    (11706.087, 75333.413]\n",
+       "Arizona                 (390320.176, 453317.529]\n",
+       "Arkansas                  (11706.087, 75333.413]\n",
+       "California              (579312.234, 642309.586]\n",
+       "Colorado                 (75333.413, 138330.766]\n",
+       "Connecticut             (390320.176, 453317.529]\n",
+       "Delaware                (264325.471, 327322.823]\n",
+       "District of Columbia    (579312.234, 642309.586]\n",
+       "Florida                 (264325.471, 327322.823]\n",
+       "Georgia                   (11706.087, 75333.413]\n",
+       "Hawaii                  (264325.471, 327322.823]\n",
+       "Idaho                     (11706.087, 75333.413]\n",
+       "Illinois                 (75333.413, 138330.766]\n",
+       "Indiana                   (11706.087, 75333.413]\n",
+       "Iowa                      (11706.087, 75333.413]\n",
+       "Kansas                    (11706.087, 75333.413]\n",
+       "Kentucky                  (11706.087, 75333.413]\n",
+       "Louisiana                 (11706.087, 75333.413]\n",
+       "Maine                    (75333.413, 138330.766]\n",
+       "Maryland                (201328.118, 264325.471]\n",
+       "Massachusetts           (453317.529, 516314.881]\n",
+       "Michigan                 (75333.413, 138330.766]\n",
+       "Minnesota                 (11706.087, 75333.413]\n",
+       "Mississippi               (11706.087, 75333.413]\n",
+       "Missouri                  (11706.087, 75333.413]\n",
+       "Montana                   (11706.087, 75333.413]\n",
+       "Nebraska                  (11706.087, 75333.413]\n",
+       "Nevada                  (138330.766, 201328.118]\n",
+       "New Hampshire            (75333.413, 138330.766]\n",
+       "New Jersey              (390320.176, 453317.529]\n",
+       "New Mexico                (11706.087, 75333.413]\n",
+       "New York                (264325.471, 327322.823]\n",
+       "North Carolina           (75333.413, 138330.766]\n",
+       "North Dakota              (11706.087, 75333.413]\n",
+       "Ohio                     (75333.413, 138330.766]\n",
+       "Oklahoma                  (11706.087, 75333.413]\n",
+       "Oregon                   (75333.413, 138330.766]\n",
+       "Pennsylvania            (138330.766, 201328.118]\n",
+       "Rhode Island            (201328.118, 264325.471]\n",
+       "South Carolina           (75333.413, 138330.766]\n",
+       "South Dakota              (11706.087, 75333.413]\n",
+       "Tennessee                 (11706.087, 75333.413]\n",
+       "Texas                    (75333.413, 138330.766]\n",
+       "Utah                     (75333.413, 138330.766]\n",
+       "Vermont                   (11706.087, 75333.413]\n",
+       "Virginia                  (11706.087, 75333.413]\n",
+       "Washington              (138330.766, 201328.118]\n",
+       "West Virginia             (11706.087, 75333.413]\n",
+       "Wisconsin                (75333.413, 138330.766]\n",
+       "Wyoming                   (11706.087, 75333.413]\n",
+       "Name: avg, dtype: category\n",
+       "Categories (10, interval[float64]): [(11706.087, 75333.413] < (75333.413, 138330.766] < (138330.766, 201328.118] < (201328.118, 264325.471] ... (390320.176, 453317.529] < (453317.529, 516314.881] < (516314.881, 579312.234] < (579312.234, 642309.586]]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('census.csv')\n",
     "df = df[df['SUMLEV']==50]\n",
@@ -18296,11 +18600,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Small\n",
+       "1     Medium\n",
+       "2      Small\n",
+       "3      Large\n",
+       "4      Small\n",
+       "5      Large\n",
+       "6     Medium\n",
+       "7     Medium\n",
+       "8      Small\n",
+       "9      Small\n",
+       "10    Medium\n",
+       "11    Medium\n",
+       "12    Medium\n",
+       "13     Small\n",
+       "dtype: category\n",
+       "Categories (3, object): [Small < Medium < Large]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series([168, 180, 174, 190, 170, 185, 179, 181, 175, 169, 182, 177, 180, 171])\n",
+    "pd.cut(s,3)\n",
+    "pd.cut(s, 3, labels = ['Small', 'Medium', 'Large'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Pivot Tables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
