--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,6 @@
        "      <th>Energy Supply</th>\n",
        "      <th>Energy Supply per Capita</th>\n",
        "      <th>% Renewable</th>\n",
-       "      <th>...</th>\n",
        "      <th>2006</th>\n",
        "      <th>2007</th>\n",
        "      <th>2008</th>\n",
@@ -725,7 +724,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -761,7 +759,6 @@
        "      <td>1.271910e+11</td>\n",
        "      <td>93.0</td>\n",
        "      <td>19.754910</td>\n",
-       "      <td>...</td>\n",
        "      <td>3.992331e+12</td>\n",
        "      <td>4.559041e+12</td>\n",
        "      <td>4.997775e+12</td>\n",
@@ -785,7 +782,6 @@
        "      <td>9.083800e+10</td>\n",
        "      <td>286.0</td>\n",
        "      <td>11.570980</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.479230e+13</td>\n",
        "      <td>1.505540e+13</td>\n",
        "      <td>1.501149e+13</td>\n",
@@ -809,7 +805,6 @@
        "      <td>1.898400e+10</td>\n",
        "      <td>149.0</td>\n",
        "      <td>10.232820</td>\n",
-       "      <td>...</td>\n",
        "      <td>5.496542e+12</td>\n",
        "      <td>5.617036e+12</td>\n",
        "      <td>5.558527e+12</td>\n",
@@ -833,7 +828,6 @@
        "      <td>7.920000e+09</td>\n",
        "      <td>124.0</td>\n",
        "      <td>10.600470</td>\n",
-       "      <td>...</td>\n",
        "      <td>2.419631e+12</td>\n",
        "      <td>2.482203e+12</td>\n",
        "      <td>2.470614e+12</td>\n",
@@ -857,7 +851,6 @@
        "      <td>3.070900e+10</td>\n",
        "      <td>214.0</td>\n",
        "      <td>17.288680</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.385793e+12</td>\n",
        "      <td>1.504071e+12</td>\n",
        "      <td>1.583004e+12</td>\n",
@@ -881,7 +874,6 @@
        "      <td>1.043100e+10</td>\n",
        "      <td>296.0</td>\n",
        "      <td>61.945430</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.564469e+12</td>\n",
        "      <td>1.596740e+12</td>\n",
        "      <td>1.612713e+12</td>\n",
@@ -905,7 +897,6 @@
        "      <td>1.326100e+10</td>\n",
        "      <td>165.0</td>\n",
        "      <td>17.901530</td>\n",
-       "      <td>...</td>\n",
        "      <td>3.332891e+12</td>\n",
        "      <td>3.441561e+12</td>\n",
        "      <td>3.478809e+12</td>\n",
@@ -929,7 +920,6 @@
        "      <td>3.319500e+10</td>\n",
        "      <td>26.0</td>\n",
        "      <td>14.969080</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.265894e+12</td>\n",
        "      <td>1.374865e+12</td>\n",
        "      <td>1.428361e+12</td>\n",
@@ -953,7 +943,6 @@
        "      <td>1.059700e+10</td>\n",
        "      <td>166.0</td>\n",
        "      <td>17.020280</td>\n",
-       "      <td>...</td>\n",
        "      <td>2.607840e+12</td>\n",
        "      <td>2.669424e+12</td>\n",
        "      <td>2.674637e+12</td>\n",
@@ -977,7 +966,6 @@
        "      <td>1.100700e+10</td>\n",
        "      <td>221.0</td>\n",
        "      <td>2.279353</td>\n",
-       "      <td>...</td>\n",
        "      <td>9.410199e+11</td>\n",
        "      <td>9.924316e+11</td>\n",
        "      <td>1.020510e+12</td>\n",
@@ -1001,7 +989,6 @@
        "      <td>6.530000e+09</td>\n",
        "      <td>109.0</td>\n",
        "      <td>33.667230</td>\n",
-       "      <td>...</td>\n",
        "      <td>2.202170e+12</td>\n",
        "      <td>2.234627e+12</td>\n",
        "      <td>2.211154e+12</td>\n",
@@ -1025,7 +1012,6 @@
        "      <td>4.923000e+09</td>\n",
        "      <td>106.0</td>\n",
        "      <td>37.968590</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.414823e+12</td>\n",
        "      <td>1.468146e+12</td>\n",
        "      <td>1.484530e+12</td>\n",
@@ -1049,7 +1035,6 @@
        "      <td>9.172000e+09</td>\n",
        "      <td>119.0</td>\n",
        "      <td>5.707721</td>\n",
-       "      <td>...</td>\n",
        "      <td>3.895523e+11</td>\n",
        "      <td>4.250646e+11</td>\n",
        "      <td>4.289909e+11</td>\n",
@@ -1073,7 +1058,6 @@
        "      <td>5.386000e+09</td>\n",
        "      <td>231.0</td>\n",
        "      <td>11.810810</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.021939e+12</td>\n",
        "      <td>1.060340e+12</td>\n",
        "      <td>1.099644e+12</td>\n",
@@ -1097,7 +1081,6 @@
        "      <td>1.214900e+10</td>\n",
        "      <td>59.0</td>\n",
        "      <td>69.648030</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.845080e+12</td>\n",
        "      <td>1.957118e+12</td>\n",
        "      <td>2.056809e+12</td>\n",
@@ -1111,7 +1094,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15 rows × 70 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1169,64 +1151,62 @@
        "Australia            5.386000e+09                     231.0    11.810810   \n",
        "Brazil               1.214900e+10                      59.0    69.648030   \n",
        "\n",
-       "                        ...               2006          2007          2008  \\\n",
-       "Country                 ...                                                  \n",
-       "China                   ...       3.992331e+12  4.559041e+12  4.997775e+12   \n",
-       "United States           ...       1.479230e+13  1.505540e+13  1.501149e+13   \n",
-       "Japan                   ...       5.496542e+12  5.617036e+12  5.558527e+12   \n",
-       "United Kingdom          ...       2.419631e+12  2.482203e+12  2.470614e+12   \n",
-       "Russian Federation      ...       1.385793e+12  1.504071e+12  1.583004e+12   \n",
-       "Canada                  ...       1.564469e+12  1.596740e+12  1.612713e+12   \n",
-       "Germany                 ...       3.332891e+12  3.441561e+12  3.478809e+12   \n",
-       "India                   ...       1.265894e+12  1.374865e+12  1.428361e+12   \n",
-       "France                  ...       2.607840e+12  2.669424e+12  2.674637e+12   \n",
-       "South Korea             ...       9.410199e+11  9.924316e+11  1.020510e+12   \n",
-       "Italy                   ...       2.202170e+12  2.234627e+12  2.211154e+12   \n",
-       "Spain                   ...       1.414823e+12  1.468146e+12  1.484530e+12   \n",
-       "Iran                    ...       3.895523e+11  4.250646e+11  4.289909e+11   \n",
-       "Australia               ...       1.021939e+12  1.060340e+12  1.099644e+12   \n",
-       "Brazil                  ...       1.845080e+12  1.957118e+12  2.056809e+12   \n",
-       "\n",
-       "                            2009          2010          2011          2012  \\\n",
+       "                            2006          2007          2008          2009  \\\n",
        "Country                                                                      \n",
-       "China               5.459247e+12  6.039659e+12  6.612490e+12  7.124978e+12   \n",
-       "United States       1.459484e+13  1.496437e+13  1.520402e+13  1.554216e+13   \n",
-       "Japan               5.251308e+12  5.498718e+12  5.473738e+12  5.569102e+12   \n",
-       "United Kingdom      2.367048e+12  2.403504e+12  2.450911e+12  2.479809e+12   \n",
-       "Russian Federation  1.459199e+12  1.524917e+12  1.589943e+12  1.645876e+12   \n",
-       "Canada              1.565145e+12  1.613406e+12  1.664087e+12  1.693133e+12   \n",
-       "Germany             3.283340e+12  3.417298e+12  3.542371e+12  3.556724e+12   \n",
-       "India               1.549483e+12  1.708459e+12  1.821872e+12  1.924235e+12   \n",
-       "France              2.595967e+12  2.646995e+12  2.702032e+12  2.706968e+12   \n",
-       "South Korea         1.027730e+12  1.094499e+12  1.134796e+12  1.160809e+12   \n",
-       "Italy               2.089938e+12  2.125185e+12  2.137439e+12  2.077184e+12   \n",
-       "Spain               1.431475e+12  1.431673e+12  1.417355e+12  1.380216e+12   \n",
-       "Iran                4.389208e+11  4.677902e+11  4.853309e+11  4.532569e+11   \n",
-       "Australia           1.119654e+12  1.142251e+12  1.169431e+12  1.211913e+12   \n",
-       "Brazil              2.054215e+12  2.208872e+12  2.295245e+12  2.339209e+12   \n",
+       "China               3.992331e+12  4.559041e+12  4.997775e+12  5.459247e+12   \n",
+       "United States       1.479230e+13  1.505540e+13  1.501149e+13  1.459484e+13   \n",
+       "Japan               5.496542e+12  5.617036e+12  5.558527e+12  5.251308e+12   \n",
+       "United Kingdom      2.419631e+12  2.482203e+12  2.470614e+12  2.367048e+12   \n",
+       "Russian Federation  1.385793e+12  1.504071e+12  1.583004e+12  1.459199e+12   \n",
+       "Canada              1.564469e+12  1.596740e+12  1.612713e+12  1.565145e+12   \n",
+       "Germany             3.332891e+12  3.441561e+12  3.478809e+12  3.283340e+12   \n",
+       "India               1.265894e+12  1.374865e+12  1.428361e+12  1.549483e+12   \n",
+       "France              2.607840e+12  2.669424e+12  2.674637e+12  2.595967e+12   \n",
+       "South Korea         9.410199e+11  9.924316e+11  1.020510e+12  1.027730e+12   \n",
+       "Italy               2.202170e+12  2.234627e+12  2.211154e+12  2.089938e+12   \n",
+       "Spain               1.414823e+12  1.468146e+12  1.484530e+12  1.431475e+12   \n",
+       "Iran                3.895523e+11  4.250646e+11  4.289909e+11  4.389208e+11   \n",
+       "Australia           1.021939e+12  1.060340e+12  1.099644e+12  1.119654e+12   \n",
+       "Brazil              1.845080e+12  1.957118e+12  2.056809e+12  2.054215e+12   \n",
        "\n",
-       "                            2013          2014          2015  \n",
-       "Country                                                       \n",
-       "China               7.672448e+12  8.230121e+12  8.797999e+12  \n",
-       "United States       1.577367e+13  1.615662e+13  1.654857e+13  \n",
-       "Japan               5.644659e+12  5.642884e+12  5.669563e+12  \n",
-       "United Kingdom      2.533370e+12  2.605643e+12  2.666333e+12  \n",
-       "Russian Federation  1.666934e+12  1.678709e+12  1.616149e+12  \n",
-       "Canada              1.730688e+12  1.773486e+12  1.792609e+12  \n",
-       "Germany             3.567317e+12  3.624386e+12  3.685556e+12  \n",
-       "India               2.051982e+12  2.200617e+12  2.367206e+12  \n",
-       "France              2.722567e+12  2.729632e+12  2.761185e+12  \n",
-       "South Korea         1.194429e+12  1.234340e+12  1.266580e+12  \n",
-       "Italy               2.040871e+12  2.033868e+12  2.049316e+12  \n",
-       "Spain               1.357139e+12  1.375605e+12  1.419821e+12  \n",
-       "Iran                4.445926e+11  4.639027e+11           NaN  \n",
-       "Australia           1.241484e+12  1.272520e+12  1.301251e+12  \n",
-       "Brazil              2.409740e+12  2.412231e+12  2.319423e+12  \n",
+       "                            2010          2011          2012          2013  \\\n",
+       "Country                                                                      \n",
+       "China               6.039659e+12  6.612490e+12  7.124978e+12  7.672448e+12   \n",
+       "United States       1.496437e+13  1.520402e+13  1.554216e+13  1.577367e+13   \n",
+       "Japan               5.498718e+12  5.473738e+12  5.569102e+12  5.644659e+12   \n",
+       "United Kingdom      2.403504e+12  2.450911e+12  2.479809e+12  2.533370e+12   \n",
+       "Russian Federation  1.524917e+12  1.589943e+12  1.645876e+12  1.666934e+12   \n",
+       "Canada              1.613406e+12  1.664087e+12  1.693133e+12  1.730688e+12   \n",
+       "Germany             3.417298e+12  3.542371e+12  3.556724e+12  3.567317e+12   \n",
+       "India               1.708459e+12  1.821872e+12  1.924235e+12  2.051982e+12   \n",
+       "France              2.646995e+12  2.702032e+12  2.706968e+12  2.722567e+12   \n",
+       "South Korea         1.094499e+12  1.134796e+12  1.160809e+12  1.194429e+12   \n",
+       "Italy               2.125185e+12  2.137439e+12  2.077184e+12  2.040871e+12   \n",
+       "Spain               1.431673e+12  1.417355e+12  1.380216e+12  1.357139e+12   \n",
+       "Iran                4.677902e+11  4.853309e+11  4.532569e+11  4.445926e+11   \n",
+       "Australia           1.142251e+12  1.169431e+12  1.211913e+12  1.241484e+12   \n",
+       "Brazil              2.208872e+12  2.295245e+12  2.339209e+12  2.409740e+12   \n",
        "\n",
-       "[15 rows x 70 columns]"
+       "                            2014          2015  \n",
+       "Country                                         \n",
+       "China               8.230121e+12  8.797999e+12  \n",
+       "United States       1.615662e+13  1.654857e+13  \n",
+       "Japan               5.642884e+12  5.669563e+12  \n",
+       "United Kingdom      2.605643e+12  2.666333e+12  \n",
+       "Russian Federation  1.678709e+12  1.616149e+12  \n",
+       "Canada              1.773486e+12  1.792609e+12  \n",
+       "Germany             3.624386e+12  3.685556e+12  \n",
+       "India               2.200617e+12  2.367206e+12  \n",
+       "France              2.729632e+12  2.761185e+12  \n",
+       "South Korea         1.234340e+12  1.266580e+12  \n",
+       "Italy               2.033868e+12  2.049316e+12  \n",
+       "Spain               1.375605e+12  1.419821e+12  \n",
+       "Iran                4.639027e+11           NaN  \n",
+       "Australia           1.272520e+12  1.301251e+12  \n",
+       "Brazil              2.412231e+12  2.319423e+12  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,8 +1224,18 @@
     "## promote country to be the index\n",
     "df_final = df_final.set_index('Country')\n",
     "## pick specific columns\n",
-    "df_final\n"
+    "\n",
+    "\n",
+    "df_f = df_final[['Rank', 'Documents', 'Citable documents', 'Citations', 'Self-citations', 'Citations per document', 'H index', 'Energy Supply', 'Energy Supply per Capita', '% Renewable', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015']]\n",
+    "df_f"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1254,6 +1244,35 @@
    "outputs": [],
    "source": [
     "def answer_one():\n",
+    "    \n",
+    "    import pandas as pd\n",
+    "    import numpy as np\n",
+    "    import re\n",
+    "    \n",
+    "    ## read in\n",
+    "    df_ei = pd.read_excel('Energy Indicators.xls', skiprows = 16, skipfooter = 38)\n",
+    "    df_ei = df_ei.drop([0]) ## remove units row\n",
+    "    df_ei = df_ei.drop(df_ei.columns[0:2], axis=1) ## remove first two columns\n",
+    "    \n",
+    "    ## name columns\n",
+    "    df_ei.columns = ['Country', 'Energy Supply', 'Energy Supply per Capita', '% Renewable']\n",
+    "    ## convert to gigajoules\n",
+    "    df_ei['Energy Supply'] = df_ei['Energy Supply'].multiply(1000000)\n",
+    "    ## replace missing data with np.nan\n",
+    "    df_ei['Energy Supply'] = pd.to_numeric(df_ei['Energy Supply'], errors='coerce')\n",
+    "    df_ei['Energy Supply per Capita'] = pd.to_numeric(df_ei['Energy Supply per Capita'], errors='coerce')\n",
+    "    df_ei['% Renewable'] = pd.to_numeric(df_ei['% Renewable'], errors='coerce')\n",
+    "    ## remove numbers\n",
+    "    df_ei['Country'] = df_ei['Country'].apply(lambda x: ''.join([i for i in x if not i.isdigit()]))\n",
+    "    ## remove puncutation\n",
+    "    df_ei['Country'] = df_ei['Country'].apply(lambda x: re.sub(\" [\\(\\[].*?[\\)\\]]\", \"\", x))\n",
+    "    ## replace specific list\n",
+    "    df_ei = df_ei.replace({\"Republic of Korea\": \"South Korea\",\n",
+    "                           \"United States of America\": \"United States\",\n",
+    "                           \"United Kingdom of Great Britain and Northern Ireland\": \"United Kingdom\",\n",
+    "                           \"China, Hong Kong Special Administrative Region\": \"Hong Kong\"})\n",
+    "    energy = df_ei\n",
+    "    \n",
     "    return \"ANSWER\""
    ]
   },
